Update Spring Boot version